--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/KayckAmaral/FormDisciplina#readme",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "nodemon": "^3.1.7"
   }
 }
